# lkl-bot

./: .gitignore  INSTALL_DESKTOP.md  Launcher_LKL.bat  README.md  folder_summary.md  lkl_engine.spec
LKL_Trading_AI/: main.py
LKL_Trading_AI/core/: bot_engine.py  config_manager.py  configuration.py  connexion_mt5.py  gestion_risque.py  ipc_server.py  notification_manager.py
LKL_Trading_AI/core/analyse_technique/: indicateurs.py  signaux.py  strategie_utilisateur.py
LKL_Trading_AI/core/communication/: envoi_backend.py  notifications.py  push_python_api.py  reception_backend.py
LKL_Trading_AI/core/journaux/: gestion_logs.py
LKL_Trading_AI/core/raisonnement/: analyse_discours.py  analyse_geopolitique.py  analyse_macroeconomique.py
LKL_Trading_AI/core/services/: __init__.py  analysis_service.py  chat_service.py  trade_service.py
LKL_Trading_AI/data/: db.py
LKL_Trading_AI/runtime/: state_manager.py
LKL_bot/: bot_state.json  guide  requirements.txt
LKL_bot/api_server/: README.md  main.py  requirements.txt  start_server.py
LKL_bot/api_server/routes/: __init__.py  (+4 more)
LKL_bot/bot/: connexion_mt5.py  db_mysql.py  gestion_risque.py  main.py
lkl_backend/: composer.json
lkl_backend/bootstrap/: app.php
lkl_backend/config/: cors.php
lkl_backend/routes/: api.php  channels.php
lkl_web/: index.html  package-lock.json  package.json
lkl_web/api/: receive.php
lkl_web/public/: manifest.json  sw.js
lkl_web/src/: App.tsx  api.ts  echo.ts  index.css
lkl_web/src-tauri/: Cargo.toml  tauri.conf.json
lkl_web/src-tauri/src/: main.rs
scripts/: build_python.py
(+147 files in other folders)
